Trying to add cos + sin code

--- a/todo.html
+++ b/todo.html
@@ -52,12 +52,14 @@
 Read Lær Sjakk and complete fourth chapter (and exercises) -&gt; 23.december.2023</li>
 <li><input type="checkbox" disabled="" />
 Read Lær Sjakk and complete fifth chapter (and exercises) -&gt; 23.december.2023</li>
+<li><input type="checkbox" disabled="" />
+Code for at least 15 minutes</li>
 </ul>
 <h6 id="calls-atcomputer-errands-office-athome-agendas-read">#calls #atComputer #errands #office #atHome #agendas #read</h6>
 <h1 id="action">Action</h1>
 <h6 id="assign-time.-revisit.-flag-what-needs-to-be-done-today.-the-battle-is-to-remember-what-to-do">Assign time. Revisit. Flag what needs to be done today. The battle is to remember what to do!</h6>
 <ul class="task-list">
-<li><input type="checkbox" disabled="" />
+<li><input type="checkbox" disabled="" checked="" />
 Code for at least 15 minutes</li>
 <li><input type="checkbox" disabled="" />
 Draw 2 hours</li>
