Trying to figure out how the course will consist of

--- a/projects/graphics/index.html
+++ b/projects/graphics/index.html
@@ -41,14 +41,16 @@
 
           <h2>Modern Graphics Programming</h2>
 
-            <p>This workshop is about working through and completing the book <a href=https://paroj.github.io/gltut/>Learning Modern 3D Graphics Programming</a> by <i>Jason L. McKesson</i> (2012). The book is available for free online. All programmers and technical minded people are welcome to join every week. There will be weekly sessions, every Friday. Bring a computer. If you have a mac with something newer than macos 10.13, you will need to use a virtual machine with linux to follow this course.</p> 
+            <p>This workshop is about working through and completing the book <a href=https://paroj.github.io/gltut/>Learning Modern 3D Graphics Programming</a> by <i>Jason L. McKesson</i> (2012). The book is available for free online. All programmers and technical minded people are welcome to join every week.</p>
+
+            <p>There will be weekly sessions, every Friday. Bring a computer. If you have a mac with an operating system newer than macos 10.13, you will need to use a virtual machine with linux to follow this course.</p> 
 
           <h3>Weekly Workshop Friday 12. December 2024</h3>
 
             <p><b>Room:</b> Grupperom 7 <a href="https://use.mazemap.com/#v=1&config=hinn&zlevel=1&center=11.073828,60.796261&zoom=20.6&campusid=353&sharepoitype=poi&sharepoi=914634">map</a></p>
             <p><b>Time:</b> 13:15 - 18:15</p>
 
-            <p>In today's session you will work through the introduction and first chapter of the book Modern 3D Graphics Programming <a href="https://paroj.github.io/gltut/">website</a></p>
+            <p>In today's session you will read the introduction and start reading the first part of chapter one in the book Modern 3D Graphics Programming <a href="https://paroj.github.io/gltut/">website</a></p>
 
             <ul>
               <li>Read About This book <a href="https://paroj.github.io/gltut/About%20this%20Book.html">link</a></li>
@@ -62,7 +64,7 @@
               <li>Compile all the tutorials (windows or macos)</li>
               <li>Read Chapter I. The Basics <a href="https://paroj.github.io/gltut/Basics/Basics.html">link</a></li>
               <li>Read Introduction <a href="https://paroj.github.io/gltut/Basics/Introduction.html">link</a></li>
-              <li>Read 1. Hello, Triangle! <a href="https://paroj.github.io/gltut/Basics/Intro%20Graphics%20and%20Rendering.html">link</a></li>
+              <li>Read the Chapter I part one: <i>Hello, Triangle!</i> <a href="https://paroj.github.io/gltut/Basics/Intro%20Graphics%20and%20Rendering.html">link</a></li>
               <li>Consider writing your own framework and hello triangle using glfw, SDL or winAPI. <a href="https://paroj.github.io/gltut/Getting%20Started%20with%20OpenGL.html">Appendix D</a> might help. You could use <a href=https://glad.dav1d.de>Glad</a> or similar to load the newest OpenGL API for your system.</li>
             </ul>
 
@@ -71,10 +73,10 @@
             <p><b>Room:</b> Grupperom 7 <a href="https://use.mazemap.com/#v=1&config=hinn&zlevel=1&center=11.073828,60.796261&zoom=20.6&campusid=353&sharepoitype=poi&sharepoi=914634">map</a></p>
             <p><b>Time:</b> 13:15 - 18:15</p>
 
-            <p>In today's session you will work through the second chapter, II. Positioning, of the book Modern 3D Graphics Programming <a href="https://paroj.github.io/gltut/">website</a></p>
+            <p>In today's session you will work through the second part of the first chapter, <i>Playing with Colors</i>, of the book Modern 3D Graphics Programming <a href="https://paroj.github.io/gltut/">website</a></p>
 
             <ul>
-              <li>Read 2. Playing with Colors</li>
+              <li>Read Chapter I part two: <i>Playing with Colors</i></li>
               <li>Try modifying tutorial 2, try to change the colours</li>
             </ul>
 
@@ -83,7 +85,9 @@
             <p><b>Room:</b> Grupperom 7 <a href="https://use.mazemap.com/#v=1&config=hinn&zlevel=1&center=11.073828,60.796261&zoom=20.6&campusid=353&sharepoitype=poi&sharepoi=914634">map</a></p>
             <p><b>Time:</b> 13:15 - 18:15</p>
 
-            <p>In today's session you will work through the third chapter, III. Illumination, of the book Modern 3D Graphics Programming <a href="https://paroj.github.io/gltut/">website</a></p>
+            <p>In today's session you will work through the second chapter, <i>Positioning</i>, of the book Modern 3D Graphics Programming <a href="https://paroj.github.io/gltut/">website</a></p>
+
+            <p>In today's session you will work through the third chapter, <i>Illumination</i>, of the book Modern 3D Graphics Programming <a href="https://paroj.github.io/gltut/">website</a></p>
 
           <p></p>
 
@@ -92,14 +96,6 @@
         <!-- Side column
         –––––––––––––––––––––––––––––––––––––––––––––––––– -->
         <div class="five columns" style="margin-top: 5%">
-
-        <p><b>Literature:</b>
-            <ul>
-              <li>Modern 3D Graphics Programming <a href="https://paroj.github.io/gltut/">website</a></li>
-              <li>The Black Art of 3D Graphics Programming <b>(optional)</b> <a href="https://archive.org/details/BlackArt3DEBook">archive.org</a></li>
-              <li>Real-Time Rendering <b>(optional)</b> <a href="https://www.realtimerendering.com">realtimerendering.com</a></li>
-              <li>Anton's OpenGL 4 Tutorials <b>(optional)</b> <a href="https://antongerdelan.net/opengl/">antongerdelan.net</a></li>
-            </ul>
 
 <div id="my-calendar"></div>
 
@@ -114,7 +110,7 @@
         firstDayOfTheWeek : "2"
     });
     cal.set('now');
-    myCalendar.goto("30/1/2024");
+    cal.goto("30/1/2024");
 
     // Add events
     cal.select([
@@ -123,6 +119,17 @@
             "26/1/2024"
     ]);
 </script>
+
+        <p><b>Literature:</b></p>
+            <ul>
+              <li>Modern 3D Graphics Programming <a href="https://paroj.github.io/gltut/">website</a></li>
+            </ul>
+        <p><b>Optional literature:</b></p>
+            <ul>
+              <li>The Black Art of 3D Graphics Programming <a href="https://archive.org/details/BlackArt3DEBook">archive.org</a></li>
+              <li>Real-Time Rendering <a href="https://www.realtimerendering.com">realtimerendering.com</a></li>
+              <li>Anton's OpenGL 4 Tutorials <a href="https://antongerdelan.net/opengl/">antongerdelan.net</a></li>
+            </ul>
 
         </div>
       </div>
