Added new break after intro

--- a/projects/graphics/index.html
+++ b/projects/graphics/index.html
@@ -41,9 +41,11 @@
 
           <h2>Modern Graphics Programming</h2>
 
-            <p>This workshop is about working through and completing the book <a href=https://paroj.github.io/gltut/>Learning Modern 3D Graphics Programming</a> by <i>Jason L. McKesson</i> (2012). The book is available for free online. All programmers and technical minded people are welcome to join every week.</p>
+            <p>This workshop is about working through and completing the book <a href=https://paroj.github.io/gltut/>Learning Modern 3D Graphics Programming</a> by <i>Jason L. McKesson</i> (2012). The book is available for free online. All programmers and technically-minded people are welcome to join every week.</p>
 
             <p>There will be weekly sessions, every Friday. Bring a computer. If you have a mac with an operating system newer than macos 10.13, you will need to use a virtual machine with linux to follow this course.</p> 
+
+    <br />
 
           <h3>Weekly Workshop Friday 12. December 2024</h3>
 
