Finished first sessions todo list

--- a/projects/graphics/index.html
+++ b/projects/graphics/index.html
@@ -52,7 +52,7 @@
             <p><b>Room:</b> Grupperom 7 <a href="https://use.mazemap.com/#v=1&config=hinn&zlevel=1&center=11.073828,60.796261&zoom=20.6&campusid=353&sharepoitype=poi&sharepoi=914634">map</a></p>
             <p><b>Time:</b> 13:15 - 18:15</p>
 
-            <p>In today's session you will read the introduction and start reading the first part of chapter one in the book Modern 3D Graphics Programming <a href="https://paroj.github.io/gltut/">website</a></p>
+            <p>In today's session you will read the introduction and start reading the introduction and the first part of chapter one (Basics) in the book Modern 3D Graphics Programming <a href="https://paroj.github.io/gltut/">website</a></p>
 
             <ul>
               <li>Read About This book <a href="https://paroj.github.io/gltut/About%20this%20Book.html">link</a></li>
@@ -63,10 +63,19 @@
               <li>Read Building the Tutorials <a href="https://paroj.github.io/gltut/Building%20the%20Tutorials.html">link</a></li>
               <li>Download CMake <a href="https://cmake.org">https://cmake.org</a></li>
               <li>Download the tutorial source code <a href="https://github.com/paroj/gltut/releases">github.com</a></li>
-              <li>Compile all the tutorials (windows or macos)</li>
+              <li>Compile all the tutorials (windows, linux or macos)</li>
               <li>Read Chapter I. The Basics <a href="https://paroj.github.io/gltut/Basics/Basics.html">link</a></li>
               <li>Read Introduction <a href="https://paroj.github.io/gltut/Basics/Introduction.html">link</a></li>
+              <li>Read Graphics and Rendering <a href="https://paroj.github.io/gltut/Basics/Intro%20Graphics%20and%20Rendering.html">link</a></li>
+              <li>Read What is OpenGL <a href="https://paroj.github.io/gltut/Basics/Intro%20What%20is%20OpenGL.html">link</a></li>
+              <li>Read Chapter I Introduction Glossary <a href="https://paroj.github.io/gltut/Basics/Intro%20Glossary.html">link</a></li>
               <li>Read the Chapter I part one: <i>Hello, Triangle!</i> <a href="https://paroj.github.io/gltut/Basics/Intro%20Graphics%20and%20Rendering.html">link</a></li>
+              <li>Read Dissecting Display <a href="https://paroj.github.io/gltut/Basics/Tut01%20Dissecting%20Display.html">link</a></li>
+              <li>Read Following the Data <a href="https://paroj.github.io/gltut/Basics/Tut01%20Following%20the%20Data.html">link</a></li>
+              <li>Read Making Shaders <a href="https://paroj.github.io/gltut/Basics/Tut01%20Making%20Shaders.html">link</a></li>
+              <li>Read Cleanup <a href="https://paroj.github.io/gltut/Basics/Tut01%20Cleanup.html">link</a></li>
+              <li>Read In Review <a href="https://paroj.github.io/gltut/Basics/Tut01%20In%20Review.html">link</a></li>
+              <li>Read Glossary for Chapter I Part one (Hello, Triangle!) <a href="https://paroj.github.io/gltut/Basics/Tut01%20Glossary.html">link</a></li>
               <li>Consider writing your own framework and hello triangle using glfw, SDL or winAPI. <a href="https://paroj.github.io/gltut/Getting%20Started%20with%20OpenGL.html">Appendix D</a> might help. You could use <a href=https://glad.dav1d.de>Glad</a> or similar to load the newest OpenGL API for your system.</li>
             </ul>
 
@@ -75,7 +84,7 @@
             <p><b>Room:</b> Grupperom 7 <a href="https://use.mazemap.com/#v=1&config=hinn&zlevel=1&center=11.073828,60.796261&zoom=20.6&campusid=353&sharepoitype=poi&sharepoi=914634">map</a></p>
             <p><b>Time:</b> 13:15 - 18:15</p>
 
-            <p>In today's session you will work through the second part of the first chapter, <i>Playing with Colors</i>, of the book Modern 3D Graphics Programming <a href="https://paroj.github.io/gltut/">website</a></p>
+            <p>In today's session you will work through the second part of the first chapter, <i>Basics: Playing with Colors</i>, of the book Modern 3D Graphics Programming <a href="https://paroj.github.io/gltut/">website</a></p>
 
             <ul>
               <li>Read Chapter I part two: <i>Playing with Colors</i></li>
