Added entire time frame of course

--- a/projects/graphics/index.html
+++ b/projects/graphics/index.html
@@ -45,7 +45,7 @@
 
             <p>There will be weekly sessions, every Friday. Bring a computer. If you have a mac with an operating system newer than macos 10.13, you will need to use a virtual machine with linux to follow this course.</p> 
 
-            <p>The book consists of six parts and 17. chapters.</p> 
+            <p>The book consists of six parts and 17. chapters. One chapter is completed each week. The course starts 12. January 2024 and ends the 3. May 2024</p> 
 
     <br />
 
