--- a/projects/graphics/index.html
+++ b/projects/graphics/index.html
@@ -45,7 +45,7 @@
 
             <p>There will be weekly sessions, every Friday. Bring a computer. If you have a mac with an operating system newer than macos 10.13, you will need to use a virtual machine with linux to follow this course.</p> 
 
-            <p>The book consists of six parts and 17. chapters. One chapter is completed each week. The course starts 12. January 2024 and ends the 3. May 2024</p> 
+            <p>The book consists of six parts and 17 chapters. One chapter is completed each week. The course starts 12. January 2024 and ends the 3. May 2024.</p> 
 
     <br />
 
@@ -66,18 +66,18 @@
               <li>Download CMake <a href="https://cmake.org">https://cmake.org</a></li>
               <li>Download the tutorial source code <a href="https://github.com/paroj/gltut/releases">github.com</a></li>
               <li>Compile all the tutorials (windows, linux or macos)</li>
-              <li>Read Chapter I. Part One: The Basics <a href="https://paroj.github.io/gltut/Basics/Basics.html">link</a></li>
+              <li>Read Part I Chapter 1: The Basics <a href="https://paroj.github.io/gltut/Basics/Basics.html">link</a></li>
               <li>Read Introduction <a href="https://paroj.github.io/gltut/Basics/Introduction.html">link</a></li>
               <li>Read Graphics and Rendering <a href="https://paroj.github.io/gltut/Basics/Intro%20Graphics%20and%20Rendering.html">link</a></li>
               <li>Read What is OpenGL <a href="https://paroj.github.io/gltut/Basics/Intro%20What%20is%20OpenGL.html">link</a></li>
-              <li>Read Chapter I Introduction Glossary <a href="https://paroj.github.io/gltut/Basics/Intro%20Glossary.html">link</a></li>
-              <li>Read Part One Chapter II: <i>Hello, Triangle!</i> <a href="https://paroj.github.io/gltut/Basics/Intro%20Graphics%20and%20Rendering.html">link</a></li>
+              <li>Read Chapter 1 Introduction Glossary <a href="https://paroj.github.io/gltut/Basics/Intro%20Glossary.html">link</a></li>
+              <li>Read Part I Chapter 2: <i>Hello, Triangle!</i> <a href="https://paroj.github.io/gltut/Basics/Intro%20Graphics%20and%20Rendering.html">link</a></li>
               <li>Read Dissecting Display <a href="https://paroj.github.io/gltut/Basics/Tut01%20Dissecting%20Display.html">link</a></li>
               <li>Read Following the Data <a href="https://paroj.github.io/gltut/Basics/Tut01%20Following%20the%20Data.html">link</a></li>
               <li>Read Making Shaders <a href="https://paroj.github.io/gltut/Basics/Tut01%20Making%20Shaders.html">link</a></li>
               <li>Read Cleanup <a href="https://paroj.github.io/gltut/Basics/Tut01%20Cleanup.html">link</a></li>
               <li>Read In Review <a href="https://paroj.github.io/gltut/Basics/Tut01%20In%20Review.html">link</a></li>
-              <li>Read Glossary for Chapter II (Hello, Triangle!) <a href="https://paroj.github.io/gltut/Basics/Tut01%20Glossary.html">link</a></li>
+              <li>Read Glossary for Chapter 2 (Hello, Triangle!) <a href="https://paroj.github.io/gltut/Basics/Tut01%20Glossary.html">link</a></li>
               <li>Consider writing your own framework and hello triangle using glfw, SDL or winAPI. <a href="https://paroj.github.io/gltut/Getting%20Started%20with%20OpenGL.html">Appendix D</a> might help. You could use <a href=https://glad.dav1d.de>Glad</a> or similar to load the newest OpenGL API for your system.</li>
             </ul>
 
@@ -86,16 +86,16 @@
             <p><b>Room:</b> Grupperom 7 <a href="https://use.mazemap.com/#v=1&config=hinn&zlevel=1&center=11.073828,60.796261&zoom=20.6&campusid=353&sharepoitype=poi&sharepoi=914634">map</a></p>
             <p><b>Time:</b> 13:15 - 18:15</p>
 
-            <p>In today's session you will work through the second chapter of part I, <i>Basics (I): Playing with Colors</i>, of the book Modern 3D Graphics Programming <a href="https://paroj.github.io/gltut/">website</a></p>
+            <p>In today's session you will work through the second chapter of part I, <i>Basics (I): Chapter 2 - Playing with Colors</i>, of the book Modern 3D Graphics Programming <a href="https://paroj.github.io/gltut/">website</a></p>
 
             <ul>
-              <li>Read Chapter II: <i>Playing with Colors</i> <a href="https://paroj.github.io/gltut/Basics/Tutorial%2002.html">link</a></li>
+              <li>Read Chapter 2: <i>Playing with Colors</i> <a href="https://paroj.github.io/gltut/Basics/Tutorial%2002.html">link</a></li>
               <li>Read Vertex Attributes <a href="https://paroj.github.io/gltut/Basics/Tut02%20Vertex%20Attributes.html">link</a></li>
               <li>In Review <a href="https://paroj.github.io/gltut/Basics/Tut02%20In%20Review.html">link</a></li>
               <li>Read Glossary <a href="https://paroj.github.io/gltut/Basics/Tut02%20Glossary.html">link</a></li>
               <li>Try modifying tutorial 2, try to change the colours</li>
               <li>Start on Part II: Positioning <a href="https://paroj.github.io/gltut/Positioning/Positioning.html">link</a></li>
-              <li>Start on chapter three: OpenGL's Moving Triangle <a href="https://paroj.github.io/gltut/Positioning/Tutorial%2003.html">link</a></li>
+              <li>Start on chapter 3: OpenGL's Moving Triangle <a href="https://paroj.github.io/gltut/Positioning/Tutorial%2003.html">link</a></li>
             </ul>
 
           <h4>Workshop Friday 26. December 2024</h4>
@@ -103,9 +103,14 @@
             <p><b>Room:</b> Grupperom 7 <a href="https://use.mazemap.com/#v=1&config=hinn&zlevel=1&center=11.073828,60.796261&zoom=20.6&campusid=353&sharepoitype=poi&sharepoi=914634">map</a></p>
             <p><b>Time:</b> 13:15 - 18:15</p>
 
-            <p>In today's session you will work through the second chapter, <i>Positioning</i>, of the book Modern 3D Graphics Programming <a href="https://paroj.github.io/gltut/">website</a></p>
+            <p>In today's session you will work through the third chapter (the first chapter of part II <i>Positioning</i>) of the book Modern 3D Graphics Programming <a href="https://paroj.github.io/gltut/">website</a></p>
 
-            <p>In today's session you will work through the third chapter, <i>Illumination</i>, of the book Modern 3D Graphics Programming <a href="https://paroj.github.io/gltut/">website</a></p>
+            <ul>
+              <li>Read introduction Part II: Positioning <a href="https://paroj.github.io/gltut/Positioning/Positioning.html">link</a></li>
+              <li>Start on chapter 3: OpenGL's Moving Triangle <a href="https://paroj.github.io/gltut/Positioning/Tutorial%2003.html">link</a></li>
+            </ul>
+
+            <p>In today's session you will work through a chapter of part III, <i>Illumination</i>, of the book Modern 3D Graphics Programming <a href="https://paroj.github.io/gltut/">website</a></p>
 
           <p></p>
 
@@ -135,6 +140,24 @@
             "12/1/2024",
             "19/1/2024",
             "26/1/2024"
+    ]);
+    // Get the element
+    // Create the calendar
+    var calFeb = jsCalendar.new({
+        target : element,
+        navigator : false,
+        firstDayOfTheWeek : "2"
+    });
+    calFeb.set('now');
+    calFeb.goto("30/2/2024");
+
+    // Add events
+    calFeb.select([
+            "1/2/2024",
+            "8/2/2024",
+            "15/2/2024",
+            "22/2/2024",
+            "29/2/2024"
     ]);
 </script>
 
