--- a/projects/graphics/index.html
+++ b/projects/graphics/index.html
@@ -49,7 +49,7 @@
 
     <br />
 
-          <h3>Weekly Workshop Friday 12. December 2024</h3>
+          <h3>Weekly Workshop Friday 12. January 2024</h3>
 
             <p><b>Room:</b> Grupperom 7 <a href="https://use.mazemap.com/#v=1&config=hinn&zlevel=1&center=11.073828,60.796261&zoom=20.6&campusid=353&sharepoitype=poi&sharepoi=914634">map</a></p>
             <p><b>Time:</b> 13:15 - 18:15</p>
@@ -81,7 +81,7 @@
               <li>Consider writing your own framework and hello triangle using glfw, SDL or winAPI. <a href="https://paroj.github.io/gltut/Getting%20Started%20with%20OpenGL.html">Appendix D</a> might help. You could use <a href=https://glad.dav1d.de>Glad</a> or similar to load the newest OpenGL API for your system.</li>
             </ul>
 
-          <h4>Workshop Friday 19. December 2024</h4>
+          <h4>Workshop Friday 19. January 2024</h4>
 
             <p><b>Room:</b> Grupperom 7 <a href="https://use.mazemap.com/#v=1&config=hinn&zlevel=1&center=11.073828,60.796261&zoom=20.6&campusid=353&sharepoitype=poi&sharepoi=914634">map</a></p>
             <p><b>Time:</b> 13:15 - 18:15</p>
@@ -98,7 +98,7 @@
               <li>Start on chapter 3: OpenGL's Moving Triangle <a href="https://paroj.github.io/gltut/Positioning/Tutorial%2003.html">link</a></li>
             </ul>
 
-          <h4>Workshop Friday 26. December 2024</h4>
+          <h4>Workshop Friday 26. January 2024</h4>
 
             <p><b>Room:</b> Grupperom 7 <a href="https://use.mazemap.com/#v=1&config=hinn&zlevel=1&center=11.073828,60.796261&zoom=20.6&campusid=353&sharepoitype=poi&sharepoi=914634">map</a></p>
             <p><b>Time:</b> 13:15 - 18:15</p>
@@ -109,6 +109,11 @@
               <li>Read introduction Part II: Positioning <a href="https://paroj.github.io/gltut/Positioning/Positioning.html">link</a></li>
               <li>Start on chapter 3: OpenGL's Moving Triangle <a href="https://paroj.github.io/gltut/Positioning/Tutorial%2003.html">link</a></li>
             </ul>
+
+          <h4>Workshop Friday 2. February 2024</h4>
+
+            <p><b>Room:</b> Grupperom 7 <a href="https://use.mazemap.com/#v=1&config=hinn&zlevel=1&center=11.073828,60.796261&zoom=20.6&campusid=353&sharepoitype=poi&sharepoi=914634">map</a></p>
+            <p><b>Time:</b> 13:15 - 18:15</p>
 
             <p>In today's session you will work through a chapter of part III, <i>Illumination</i>, of the book Modern 3D Graphics Programming <a href="https://paroj.github.io/gltut/">website</a></p>
 
@@ -149,7 +154,7 @@
         firstDayOfTheWeek : "2"
     });
     calFeb.set('now');
-    calFeb.goto("30/2/2024");
+    calFeb.goto("1/2/2024");
 
     // Add events
     calFeb.select([
