--- a/projects/graphics/index.html
+++ b/projects/graphics/index.html
@@ -101,6 +101,13 @@
             <ul>
               <li>Read introduction Part II: Positioning <a href="https://paroj.github.io/gltut/Positioning/Positioning.html">link</a></li>
               <li>Start on chapter 3: OpenGL's Moving Triangle <a href="https://paroj.github.io/gltut/Positioning/Tutorial%2003.html">link</a></li>
+              <li>Read A Better Way <a href="https://paroj.github.io/gltut/Positioning/Tut03%20A%20Better%20Way.html">link</a></li>
+              <li>Read More Power to the Shaders <a href="https://paroj.github.io/gltut/Positioning/Tut03%20More%20Power%20To%20The%20Shaders.html">link</a></li>
+              <li>Read Multiple Shaders <a href="https://paroj.github.io/gltut/Positioning/Tut03%20Multiple%20Shaders.html">link</a></li>
+              <li>Read On Vertex Shader Performance <a href="https://paroj.github.io/gltut/Positioning/Tut03%20On%20Vertex%20Shader%20Performance.html">link</a></li>
+              <li>Read Chapter 3 In Review <a href="https://paroj.github.io/gltut/Positioning/Tut03%20In%20Review.html">link</a></li>
+              <li>Read Chapter 3 Glossary <a href="https://paroj.github.io/gltut/Positioning/Tut03%20Glossary.html">link</a></li>
+              <li>Try using uniforms to change various properties of the graphics 
             </ul>
 
           <h4>Workshop Friday 2. February 2024</h4>
@@ -108,10 +115,42 @@
             <p><b>Room:</b> Grupperom 7 <a href="https://use.mazemap.com/#v=1&config=hinn&zlevel=1&center=11.073828,60.796261&zoom=20.6&campusid=353&sharepoitype=poi&sharepoi=914634">map</a></p>
             <p><b>Time:</b> 13:15 - 18:15</p>
 
+            <p>In today's session you will work through chapter 4 of the book Modern 3D Graphics Programming <a href="https://paroj.github.io/gltut/">website</a></p>
+
+            <ul>
+              <li>Read Chatper 4 Objects at Rest <a href="https://paroj.github.io/gltut/Positioning/Tutorial%2004.html">link</a></li>
+              <li>Read Perspective Projection <a href="https://paroj.github.io/gltut/Positioning/Tut04%20Perspective%20Projection.html">link</a></li>
+              <li>Read The Matrix has You <a href="https://paroj.github.io/gltut/Positioning/Tut04%20The%20Matrix%20Has%20You.html">link</a></li>
+              <li>Read Aspect of the World <a href="https://paroj.github.io/gltut/Positioning/Tut04%20Aspect%20of%20the%20World.html">link</a></li>
+              <li>Read Chapter 4 In Review <a href="https://paroj.github.io/gltut/Positioning/Tut04%20In%20Review.html">link</a></li>
+              <li>Read Chater 4 Glossary <a href="https://paroj.github.io/gltut/Positioning/Tut04%20Glossary.html">link</a></li>
+            </ul>
+
+          <h4>Workshop Friday 9. February 2024</h4>
+
+            <p><b>Room:</b> Grupperom 7 <a href="https://use.mazemap.com/#v=1&config=hinn&zlevel=1&center=11.073828,60.796261&zoom=20.6&campusid=353&sharepoitype=poi&sharepoi=914634">map</a></p>
+            <p><b>Time:</b> 13:15 - 18:15</p>
+
+            <p>In today's session you will work through chapter 5 of the book Modern 3D Graphics Programming <a href="https://paroj.github.io/gltut/">website</a></p>
+
+            <ul>
+              <li>Start on Chapter 5: Objects in Depth <a href="https://paroj.github.io/gltut/Positioning/Tutorial%2005.html">link</a></li>
+              <li>Read Optimization: Base Vertex <a href="https://paroj.github.io/gltut/Positioning/Tut05%20Optimization%20Base%20Vertex.html">link</a></li>
+              <li>Read Overlap and Depth Buffering <a href="https://paroj.github.io/gltut/Positioning/Tut05%20Overlap%20and%20Depth%20Buffering.html">link</a></li>
+              <li>Read Boundaries and Clipping <a href="https://paroj.github.io/gltut/Positioning/Tut05%20Boundaries%20and%20Clipping.html">link</a></li>
+              <li>Read Depth Clamping <a href="https://paroj.github.io/gltut/Positioning/Tut05%20Depth%20Clamping.html">link</a></li>
+              <li>Read Chapter 5 In Review <a href="https://paroj.github.io/gltut/Positioning/Tut05%20In%20Review.html">link</a></li>
+              <li>Read Chapter 5 Glossary <a href="https://paroj.github.io/gltut/Positioning/Tut05%20Glossary.html">link</a></li>
+            </ul>
+
+          <h4>Workshop Friday 16. February 2024</h4>
+
+            <p><b>Room:</b> Grupperom 7 <a href="https://use.mazemap.com/#v=1&config=hinn&zlevel=1&center=11.073828,60.796261&zoom=20.6&campusid=353&sharepoitype=poi&sharepoi=914634">map</a></p>
+            <p><b>Time:</b> 13:15 - 18:15</p>
+
             <p>In today's session you will work through a chapter of part III, <i>Illumination</i>, of the book Modern 3D Graphics Programming <a href="https://paroj.github.io/gltut/">website</a></p>
 
           <p></p>
-
         </div>
 
         <!-- Side column
