--- a/todo.html
+++ b/todo.html
@@ -50,6 +50,8 @@
 <ul class="task-list">
 <li><input type="checkbox" disabled="" />
 Try contacting Valmuen and NITO if they would like to fund a graphics course</li>
+<li><input type="checkbox" disabled="" />
+Add when chores need to be done into calendar</li>
 </ul>
 <h6 id="calls-atcomputer-errands-office-athome-agendas-read">#calls #atComputer #errands #office #atHome #agendas #read</h6>
 <h1 id="action">Action</h1>
