Added when the exams are under long term plan

--- a/todo.html
+++ b/todo.html
@@ -192,6 +192,12 @@ Complete Blender Creator 3: Learn 3D Modelling for Beginners</li>
 <li><input type="checkbox" disabled="" />
 Exam Practice Mathematics #mathematics</li>
 <li><input type="checkbox" disabled="" />
+Exam Mathematics II -&gt; 07.05.2024 #mathematics</li>
+<li><input type="checkbox" disabled="" />
+Exam Game Deisgn -&gt; 13.05.2024 #design</li>
+<li><input type="checkbox" disabled="" />
+Exam Programming II -&gt; 21.05.2024 #programming</li>
+<li><input type="checkbox" disabled="" />
 Complete Semester 1 Game School <a href="https://studiekatalog.edutorium.no/inn/nb/program/B2VISIM/2023-host">https://studiekatalog.edutorium.no/inn/nb/program/B2VISIM/2023-host</a></li>
 <li><input type="checkbox" disabled="" />
 Do drawabox.com course</li>
