Added about 7 chapters now to graphics course

--- a/projects/graphics/index.html
+++ b/projects/graphics/index.html
@@ -124,6 +124,7 @@
               <li>Read Aspect of the World <a href="https://paroj.github.io/gltut/Positioning/Tut04%20Aspect%20of%20the%20World.html">link</a></li>
               <li>Read Chapter 4 In Review <a href="https://paroj.github.io/gltut/Positioning/Tut04%20In%20Review.html">link</a></li>
               <li>Read Chater 4 Glossary <a href="https://paroj.github.io/gltut/Positioning/Tut04%20Glossary.html">link</a></li>
+              <li>Try to make a program which lets you toggle between perspective and orthogonal projection</li>
             </ul>
 
           <h4>Workshop Friday 9. February 2024</h4>
@@ -141,6 +142,7 @@
               <li>Read Depth Clamping <a href="https://paroj.github.io/gltut/Positioning/Tut05%20Depth%20Clamping.html">link</a></li>
               <li>Read Chapter 5 In Review <a href="https://paroj.github.io/gltut/Positioning/Tut05%20In%20Review.html">link</a></li>
               <li>Read Chapter 5 Glossary <a href="https://paroj.github.io/gltut/Positioning/Tut05%20Glossary.html">link</a></li>
+              <li>See if you can load in your own objects in, for instance, the OBJ format, gltf format or your own format from blender</li>
             </ul>
 
           <h4>Workshop Friday 16. February 2024</h4>
@@ -148,8 +150,50 @@
             <p><b>Room:</b> Grupperom 7 <a href="https://use.mazemap.com/#v=1&config=hinn&zlevel=1&center=11.073828,60.796261&zoom=20.6&campusid=353&sharepoitype=poi&sharepoi=914634">map</a></p>
             <p><b>Time:</b> 13:15 - 18:15</p>
 
-            <p>In today's session you will work through a chapter of part III, <i>Illumination</i>, of the book Modern 3D Graphics Programming <a href="https://paroj.github.io/gltut/">website</a></p>
+            <p>In today's session you will work through <i>Chapter 6: Objects in Motion</i>, a chapter in part II, <i>Positioning</i>, of the book Modern 3D Graphics Programming <a href="https://paroj.github.io/gltut/">website</a></p>
 
+            <ul>
+              <li>Read Chapter 6 <a href="https://paroj.github.io/gltut/Positioning/Tutorial%2006.html">link</a></li>
+              <li>Read Translation <a href="https://paroj.github.io/gltut/Positioning/Tut06%20Translation.html">link</a></li>
+              <li>Read Scale <a href="https://paroj.github.io/gltut/Positioning/Tut06%20Scale.html">link</a></li>
+              <li>Read Rotation <a href="https://paroj.github.io/gltut/Positioning/Tut06%20Rotation.html">link</a></li>
+              <li>Read Fun with Matrices <a href="https://paroj.github.io/gltut/Positioning/Tut06%20Fun%20with%20Matrices.html">link</a></li>
+              <li>Chapter 6 In Review <a href="https://paroj.github.io/gltut/Positioning/Tut06%20In%20Review.html">link</a></li>
+              <li>Chapter 6 Glossary <a href="https://paroj.github.io/gltut/Positioning/Tut06%20Glossary.html">link</a></li>
+              <li>Try moving an object around the scene with keyboard input</li>
+              <li>Make the entire solar system out of spheres in OpenGL, where the planets spin at correct speeds and are at correct distances and orbits to the sun</li>
+            </ul>
+
+          <h4>Workshop Friday 23. February 2024</h4>
+
+            <p><b>Room:</b> Grupperom 7 <a href="https://use.mazemap.com/#v=1&config=hinn&zlevel=1&center=11.073828,60.796261&zoom=20.6&campusid=353&sharepoitype=poi&sharepoi=914634">map</a></p>
+            <p><b>Time:</b> 13:15 - 18:15</p>
+
+            <p>In today's session you will work through <i>Chapter 7: World in Motion</i>, the second to last chapter of part II, <i>Positioning</i>, in the book Modern 3D Graphics Programming <a href="https://paroj.github.io/gltut/">website</a></p>
+
+            <ul>
+              <li>Start on Chapter 7 World in Motion <a href="https://paroj.github.io/gltut/Positioning/Tutorial%2007.html">link</a></li>
+              <li>Read Primitive Drawing <a href="https://paroj.github.io/gltut/Positioning/Tut07%20Primitive%20Drawing.html">link</a></li>
+              <li>Read Shared Uniforms <a href="https://paroj.github.io/gltut/Positioning/Tut07%20Shared%20Uniforms.html">link</a></li>
+              <li>Read The Perils of World Space <a href="https://paroj.github.io/gltut/Positioning/Tut07%20The%20Perils%20of%20World%20Space.html">link</a></li>
+              <li>Read Chapter 7 In Review <a href="https://paroj.github.io/gltut/Positioning/Tut07%20In%20Review.html">link</a></li>
+              <li>Read Chapter 7 Glossary <a href="https://paroj.github.io/gltut/Positioning/Tut07%20Glossary.html">link</a></li>
+              <li>Write code which renders an icosphere</li>
+              <li>Write code which renders an uv-sphere</li>
+              <li>Write code which renders a cube</li>
+              <li>Write code which renders a cylinder</li>
+            </ul>
+
+          <h4>Workshop Friday 1. March 2024</h4>
+
+            <p><b>Room:</b> Grupperom 7 <a href="https://use.mazemap.com/#v=1&config=hinn&zlevel=1&center=11.073828,60.796261&zoom=20.6&campusid=353&sharepoitype=poi&sharepoi=914634">map</a></p>
+            <p><b>Time:</b> 13:15 - 18:15</p>
+
+            <p>In today's session you will work through <i>Chapter 8: Getting Oriented</i>, the final chapter of part II, <i>Positioning</i>, in the book Modern 3D Graphics Programming <a href="https://paroj.github.io/gltut/">website</a></p>
+
+            <ul>
+              <li>Start on Chapter 8 Getting Oriented <a href="https://paroj.github.io/gltut/Positioning/Tutorial%2008.html">link</a></li>
+            </ul>
           <p></p>
         </div>
 
