Started adding chapter 11 in graphics course

--- a/projects/graphics/index.html
+++ b/projects/graphics/index.html
@@ -143,6 +143,7 @@
               <li>Read Chapter 5 In Review <a href="https://paroj.github.io/gltut/Positioning/Tut05%20In%20Review.html">link</a></li>
               <li>Read Chapter 5 Glossary <a href="https://paroj.github.io/gltut/Positioning/Tut05%20Glossary.html">link</a></li>
               <li>See if you can load in your own objects in, for instance, the OBJ format, gltf format or your own format from blender</li>
+              <li>Consider including <a href="https://github.com/g-truc/glm">glm</a> to store and manipulate vectors and matrices</li>
             </ul>
 
           <h4>Workshop Friday 16. February 2024</h4>
@@ -179,7 +180,7 @@
               <li>Read Chapter 7 In Review <a href="https://paroj.github.io/gltut/Positioning/Tut07%20In%20Review.html">link</a></li>
               <li>Read Chapter 7 Glossary <a href="https://paroj.github.io/gltut/Positioning/Tut07%20Glossary.html">link</a></li>
               <li>Write code which renders an icosphere</li>
-              <li>Write code which renders an uv-sphere</li>
+              <li>Write code which renders a uv-sphere</li>
               <li>Write code which renders a cube</li>
               <li>Write code which renders a cylinder</li>
             </ul>
@@ -193,7 +194,59 @@
 
             <ul>
               <li>Start on Chapter 8 Getting Oriented <a href="https://paroj.github.io/gltut/Positioning/Tutorial%2008.html">link</a></li>
+              <li>Read Quaternions <a href="https://paroj.github.io/gltut/Positioning/Tut08%20Quaternions.html">link</a></li>
+              <li>Read Camera-Relative Orientation <a href="https://paroj.github.io/gltut/Positioning/Tut08%20Camera%20Relative%20Orientation.html">link</a></li>
+              <li>Read Interpolation <a href="https://paroj.github.io/gltut/Positioning/Tut08%20Interpolation.html">link</a></li>
+              <li>Read Chapter 8 In Review <a href="https://paroj.github.io/gltut/Positioning/Tut08%20In%20Review.html">link</a></li>
+              <li>Read Chapter 8 Glossary <a href="https://paroj.github.io/gltut/Positioning/Tut08%20Glossary.html">link</a></li>
             </ul>
+
+          <h4>Workshop Friday 8. March 2024</h4>
+
+            <p><b>Room:</b> Grupperom 7 <a href="https://use.mazemap.com/#v=1&config=hinn&zlevel=1&center=11.073828,60.796261&zoom=20.6&campusid=353&sharepoitype=poi&sharepoi=914634">map</a></p>
+            <p><b>Time:</b> 13:15 - 18:15</p>
+
+            <p>In today's session you will start on part III, <i>Illumination</i>, of the book Modern 3D Graphics Programming <a href="https://paroj.github.io/gltut/">website</a></p>
+
+            <ul>
+              <li>Start reading Part III: Illumination <a href="https://paroj.github.io/gltut/Illumination/Illumination.html">link</a></li>
+              <li>Start reading Chapter 9 Lights On <a href="https://paroj.github.io/gltut/Illumination/Tutorial%2009.html">link</a></li>
+              <li>Read Normal Transformation <a href="https://paroj.github.io/gltut/Illumination/Tut09%20Normal%20Transformation.html">link</a></li>
+              <li>Read Global Illumination <a href="https://paroj.github.io/gltut/Illumination/Tut09%20Global%20Illumination.html">link</a></li>
+              <li>Read Mesh Topology <a href="https://paroj.github.io/gltut/Illumination/Tut09%20Mesh%20Topology.html">link</a></li>
+              <li>Read Chapter 9 In Review <a href="https://paroj.github.io/gltut/Illumination/Tut09%20In%20Review.html">link</a></li>
+              <li>Read Chapter 9 Glossary <a href="https://paroj.github.io/gltut/Illumination/Tut09%20Glossary.html">link</a></li>
+              <li>Consider Phong shading <a href="https://web.archive.org/web/20180816064924/http://www.sunandblackcat.com/tipFullView.php?l=eng&topicid=30">arhive.org</a></li>
+            </ul>
+
+          <h4>Workshop Friday 15. March 2024</h4>
+
+            <p><b>Room:</b> Grupperom 7 <a href="https://use.mazemap.com/#v=1&config=hinn&zlevel=1&center=11.073828,60.796261&zoom=20.6&campusid=353&sharepoitype=poi&sharepoi=914634">map</a></p>
+            <p><b>Time:</b> 13:15 - 18:15</p>
+
+            <p>In today's session you contiue to learn about <i>Illumination</i> from the book Modern 3D Graphics Programming <a href="https://paroj.github.io/gltut/">website</a></p>
+
+            <ul>
+              <li>Start reading Chapter 10 Plane Lights <a href="https://paroj.github.io/gltut/Illumination/Tutorial%2010.html">link</a></li>
+              <li>Read Interpolation <a href="https://paroj.github.io/gltut/Illumination/Tut10%20Interpolation.html">link</a></li>
+              <li>Read Fragment Lighting <a href="https://paroj.github.io/gltut/Illumination/Tut10%20Fragment%20Lighting.html">link</a></li>
+              <li>Read Distant Points of Light <a href="https://paroj.github.io/gltut/Illumination/Tut10%20Distant%20Points%20of%20Light.html">link</a></li>
+              <li>Read Chapter 10 In Review <a href="https://paroj.github.io/gltut/Illumination/Tut10%20In%20Review.html">link</a></li>
+              <li>Read Chapter 10 Glossary <a href="https://paroj.github.io/gltut/Illumination/Tut10%20Glossary.html">link</a></li>
+            </ul>
+
+          <h4>Workshop Friday 22. March 2024</h4>
+
+            <p><b>Room:</b> Grupperom 7 <a href="https://use.mazemap.com/#v=1&config=hinn&zlevel=1&center=11.073828,60.796261&zoom=20.6&campusid=353&sharepoitype=poi&sharepoi=914634">map</a></p>
+            <p><b>Time:</b> 13:15 - 18:15</p>
+
+            <p>In today's session you contiue to learn about <i>Illumination</i> from the book Modern 3D Graphics Programming <a href="https://paroj.github.io/gltut/">website</a></p>
+
+            <ul>
+              <li>Start reading Chapter 11 Shinies <a href="https://paroj.github.io/gltut/Illumination/Tutorial%2011.html">link</a></li>
+              <li>Read Phong Model <a href="https://paroj.github.io/gltut/Illumination/Tut11%20Phong%20Model.html">link</a></li>
+            </ul>
+
           <p></p>
         </div>
 
