Finished adding content to the graphics course

--- a/projects/graphics/index.html
+++ b/projects/graphics/index.html
@@ -247,9 +247,115 @@
             <ul>
               <li>Start reading Chapter 11 Shinies <a href="https://paroj.github.io/gltut/Illumination/Tutorial%2011.html">link</a></li>
               <li>Read Phong Model <a href="https://paroj.github.io/gltut/Illumination/Tut11%20Phong%20Model.html">link</a></li>
+              <li>Read Blinn-Phong Model <a href="https://paroj.github.io/gltut/Illumination/Tut11%20BlinnPhong%20Model.html">link</a></li>
+              <li>Read Gaussian <a href="https://paroj.github.io/gltut/Illumination/Tut11%20Gaussian.html">link</a></li>
+              <li>Read On Performance <a href="https://paroj.github.io/gltut/Illumination/Tut11%20On%20Performance.html">link</a></li>
+              <li>Read Chapter 11 In Review <a href="https://paroj.github.io/gltut/Illumination/Tut11%20In%20Review.html">link</a></li>
+              <li>Read Chapter 11 Glossary <a href="https://paroj.github.io/gltut/Illumination/Tut11%20Glossary.html">link</a></li>
+            </ul>
+
+          <h4>Workshop Friday 29. March 2024</h4>
+
+            <p><b>Room:</b> Grupperom 7 <a href="https://use.mazemap.com/#v=1&config=hinn&zlevel=1&center=11.073828,60.796261&zoom=20.6&campusid=353&sharepoitype=poi&sharepoi=914634">map</a></p>
+            <p><b>Time:</b> 13:15 - 18:15</p>
+
+            <p>In today's session you contiue to learn about <i>Illumination</i> from the book Modern 3D Graphics Programming <a href="https://paroj.github.io/gltut/">website</a></p>
+
+            <ul>
+              <li>Start reading Chapter 12 Dynamic Range <a href="https://paroj.github.io/gltut/Illumination/Tutorial%2012.html">link</a></li>
+              <li>Read High Dynamic Range <a href="https://paroj.github.io/gltut/Illumination/Tut12%20High%20Dynamic%20Range.html">link</a></li>
+              <li>Read Linearity and Gamma <a href="https://paroj.github.io/gltut/Illumination/Tut12%20Monitors%20and%20Gamma.html">link</a></li>
+              <li>Read Chapter 12 In Review <a href="https://paroj.github.io/gltut/Illumination/Tut12%20In%20Review.html">link</a></li>
+              <li>Read Chapter 12 Glossary <a href="https://paroj.github.io/gltut/Illumination/Tut12%20Glossary.html">link</a></li>
+            </ul>
+
+          <h4>Workshop Friday 5. April 2024</h4>
+
+            <p><b>Room:</b> Grupperom 7 <a href="https://use.mazemap.com/#v=1&config=hinn&zlevel=1&center=11.073828,60.796261&zoom=20.6&campusid=353&sharepoitype=poi&sharepoi=914634">map</a></p>
+            <p><b>Time:</b> 13:15 - 18:15</p>
+
+            <p>In today's session you contiue to learn about <i>Illumination</i> from the book Modern 3D Graphics Programming <a href="https://paroj.github.io/gltut/">website</a></p>
+
+            <ul>
+              <li>Start reading Chapter 13 Lies and Impostors <a href="https://paroj.github.io/gltut/Illumination/Tutorial%2013.html">link</a></li>
+              <li>Read Correct Chicanery <a href="https://paroj.github.io/gltut/Illumination/Tut13%20Correct%20Chicanery.html">link</a></li>
+              <li>Read Deceit in Depth <a href="https://paroj.github.io/gltut/Illumination/Tut13%20Deceit%20in%20Depth.html">link</a></li>
+              <li>Read Purloined Primitives <a href="https://paroj.github.io/gltut/Illumination/Tut13%20Purloined%20Primitives.html">link</a></li>
+              <li>Read Chatper 13 In Review <a href="https://paroj.github.io/gltut/Illumination/Tut13%20In%20Review.html">link</a></li>
+              <li>Read Chatper 13 Glossary <a href="https://paroj.github.io/gltut/Illumination/Tut13%20Glossary.html">link</a></li>
+            </ul>
+
+          <h4>Workshop Friday 12. April 2024</h4>
+
+            <p><b>Room:</b> Grupperom 7 <a href="https://use.mazemap.com/#v=1&config=hinn&zlevel=1&center=11.073828,60.796261&zoom=20.6&campusid=353&sharepoitype=poi&sharepoi=914634">map</a></p>
+            <p><b>Time:</b> 13:15 - 18:15</p>
+
+            <p>In today's session you will start to learn about <i>Texturing</i> from the book Modern 3D Graphics Programming <a href="https://paroj.github.io/gltut/">website</a></p>
+
+            <ul>
+              <li>Start reading Part IV Texturing <a href="https://paroj.github.io/gltut/Texturing/Texturing.html">link</a></li>
+              <li>Start reading Chapter 14: Textures are not Pictures <a href="https://paroj.github.io/gltut/Texturing/Tutorial%2014.html">link</a></li>
+              <li>Read Interpolation Redux <a href="https://paroj.github.io/gltut/Texturing/Tut14%20Interpolation%20Redux.html">link</a></li>
+              <li>Read Texture Mapping <a href="https://paroj.github.io/gltut/Texturing/Tut14%20Texture%20Mapping.html">link</a></li>
+              <li>Read Chapter 14 In Review <a href="https://paroj.github.io/gltut/Texturing/Tut14%20In%20Review.html">link</a></li>
+              <li>Read Chapter 14 Glossary <a href="https://paroj.github.io/gltut/Texturing/Tut14%20Glossary.html">link</a></li>
+            </ul>
+
+          <h4>Workshop Friday 19. April 2024</h4>
+
+            <p><b>Room:</b> Grupperom 7 <a href="https://use.mazemap.com/#v=1&config=hinn&zlevel=1&center=11.073828,60.796261&zoom=20.6&campusid=353&sharepoitype=poi&sharepoi=914634">map</a></p>
+            <p><b>Time:</b> 13:15 - 18:15</p>
+
+            <p>In today's session you will start to learn about <i>Texturing</i> from the book Modern 3D Graphics Programming <a href="https://paroj.github.io/gltut/">website</a></p>
+
+            <ul>
+              <li>Start reading Chapter 15: Many Images <a href="https://paroj.github.io/gltut/Texturing/Tutorial%2015.html">link</a></li>
+              <li>Read Linear Filtering <a href="https://paroj.github.io/gltut/Texturing/Tut15%20Magnification.html">link</a></li>
+              <li>Read Needs More Pictures <a href="https://paroj.github.io/gltut/Texturing/Tut15%20Needs%20More%20Pictures.html">link</a></li>
+              <li>Read Anisotropy <a href="https://paroj.github.io/gltut/Texturing/Tut15%20Anisotropy.html">link</a></li>
+              <li>Read How Mipmap Selection Works <a href="https://paroj.github.io/gltut/Texturing/Tut15%20How%20Mipmapping%20Works.html">link</a></li>
+              <li>Read Performance <a href="https://paroj.github.io/gltut/Texturing/Tut15%20Performace.html">link</a></li>
+              <li>Read Chapter 15 In Review <a href="https://paroj.github.io/gltut/Texturing/Tut15%20In%20Review.html">link</a></li>
+              <li>Read Chapter 15 Glossary <a href="https://paroj.github.io/gltut/Texturing/Tut15%20Glossary.html">link</a></li>
+            </ul>
+
+          <h4>Workshop Friday 26. April 2024</h4>
+
+            <p><b>Room:</b> Grupperom 7 <a href="https://use.mazemap.com/#v=1&config=hinn&zlevel=1&center=11.073828,60.796261&zoom=20.6&campusid=353&sharepoitype=poi&sharepoi=914634">map</a></p>
+            <p><b>Time:</b> 13:15 - 18:15</p>
+
+            <p>In today's session you will start to learn about <i>Texturing</i> from the book Modern 3D Graphics Programming <a href="https://paroj.github.io/gltut/">website</a></p>
+
+            <ul>
+              <li>Start reading Chapter 16: Gamma and Textures <a href="https://paroj.github.io/gltut/Texturing/Tutorial%2016.html">link</a></li>
+              <li>Read sRGB and Mipmaps <a href="https://paroj.github.io/gltut/Texturing/Tut16%20Mipmaps%20and%20Linearity.html">link</a></li>
+              <li>Read sRGB and the Screen <a href="https://paroj.github.io/gltut/Texturing/Tut16%20Free%20Gamma%20Correction.html">link</a></li>
+              <li>Read Chapter 16 In Review <a href="https://paroj.github.io/gltut/Texturing/Tut16%20In%20Review.html">link</a></li>
+              <li>Read Chapter 16 Glossary <a href="https://paroj.github.io/gltut/Texturing/Tut16%20Glossary.html">link</a></li>
+            </ul>
+
+          <h4>Workshop Friday 3. May 2024</h4>
+
+            <p><b>Room:</b> Grupperom 7 <a href="https://use.mazemap.com/#v=1&config=hinn&zlevel=1&center=11.073828,60.796261&zoom=20.6&campusid=353&sharepoitype=poi&sharepoi=914634">map</a></p>
+            <p><b>Time:</b> 13:15 - 18:15</p>
+
+            <p>In today's session you will start to learn about <i>Texturing</i> from the book Modern 3D Graphics Programming <a href="https://paroj.github.io/gltut/">website</a></p>
+
+            <ul>
+              <li>Start reading Chapter 17: Spotlight on Textures <a href="https://paroj.github.io/gltut/Texturing/Tutorial%2017.html">link</a></li>
+              <li>Read Projective Texture <a href="https://paroj.github.io/gltut/Texturing/Tut17%20Projective%20Texture.html">link</a></li>
+              <li>Read Pointing Projections <a href="https://paroj.github.io/gltut/Texturing/Tut17%20Pointing%20Projections.html">link</a></li>
+              <li>Read Chapter 17 In Review <a href="https://paroj.github.io/gltut/Texturing/Tut17%20In%20Review.html">link</a></li>
+              <li>Read Chapter 17 Glossary <a href="https://paroj.github.io/gltut/Texturing/Tut17%20Glossary.html">link</a></li>
+              <li>Read Part V. Framebuffer <a href="https://paroj.github.io/gltut/Framebuffer/Framebuffer.html">link</a></li>
+              <li>Read Part VI. Advanced Lighting <a href="https://paroj.github.io/gltut/Adv%20Lighting/Advanced%20Lighting.html">link</a></li>
+              <li>There aren't many things on the final two parts. Try storing the framebuffer with glReadPixels as an image with <a href="https://github.com/nothings/stb/blob/master/stb_image_write.h">stb_image_write</a> or in the very simple <a href="https://en.wikipedia.org/wiki/Netpbm#File_formats">PPM</a> image format.</li>
+              <li>There are many great resources on graphics, consider Anton's tutorials which has mouse picking as well as morph target tutorials. See the side bar under optional literature.</li>
+
             </ul>
 
           <p></p>
+
         </div>
 
         <!-- Side column
